[package]
name = "lisp-for-cats"
version = "0.1.0"
authors = ["eignnx <eignnx@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

# The generated code depends on lalrpop-util.
#
# The generated tokenizer depends on the regex crate.
#
# (If you write your own tokenizer, or already have the regex
# crate, you can skip this dependency.)
[dependencies]
lalrpop-util = "0.15.2"
regex = "0.2.0"
im = "10.2.0"
rug = "1.2.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.15.2"
